# 2024-US-presidential-election-research

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: dynamic_topics.html
notebooks/: load_data.ipynb
notebooks/original_data/hot/: politics_2024_10_31.csv  politics_2024_11_01.csv  politics_2024_11_02.csv  politics_2024_11_03.csv  politics_2024_11_04.csv  politics_2024_11_05.csv  politics_2024_11_06.csv  politics_2024_11_09.csv  politics_2024_11_10.csv  politics_2024_11_11.csv  politics_2024_11_12.csv  politics_2024_11_14.csv  politics_2024_11_15.csv  politics_2024_11_16.csv
notebooks/original_data/top/: politics_2024_10_31.csv  politics_2024_11_01.csv  politics_2024_11_02.csv  politics_2024_11_03.csv  politics_2024_11_04.csv  politics_2024_11_05.csv  politics_2024_11_06.csv  politics_2024_11_07_morning.csv  politics_2024_11_10.csv  politics_2024_11_11.csv  politics_2024_11_12.csv  politics_2024_11_14.csv  politics_2024_11_15.csv  politics_2024_11_16.csv
