[project]
name = "2024 US presidential election study"
version = "0.1.0"
description = "The main goal of this project is - to identify and analyze trends in reddit discussions during 2024 US election using topic modeling"
authors = [
    {name = "leobellap", email = "leobellap@gmail.com"},
]
dependencies = [
    "ruff>=0.7.0",
    "praw>=7.8.0",
    "ipykernel>=6.29.5",
    "tqdm>=4.66.5",
    "spacy>=3.8.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "bertopic>=0.16.4",
    "umap>=0.1.1",
    "hdbscan>=0.8.39",
    "scikit-learn>=1.5.2",
    "plotly>=5.24.1",
    "pip>=24.2",
    "nbformat>=5.10.4",
    "ipywidgets>=8.1.5",
    "cuml-cu12<=24.12,>=24.12.0a0",
    "dask-cuda<=24.12,>=24.12.0a0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "cuml"
url = "https://pypi.anaconda.org/rapidsai-wheels-nightly/simple"
include_packages = ["cuml-cu12", "dask-cuda"]
